# EdgeEMSConfig

./: .cursorrules  CHANGELOG.md  README.md  auto-imports.d.ts  components.d.ts  latest.json  package.json  pnpm-lock.yaml  stats.html  tsconfig.build.json  vite.config.ts  vitest.config.ts
.github/workflows/: prod.yml
dist-isolation/: index.html
script/: generate-latest.js  type-check-build.js
src/: App.vue  auto-imports.d.ts  components.d.ts  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/api/: System.ts  alarm.ts  channelsManagement.ts  devicesManagement.ts  rules.ts  user.ts  userManagement.ts
src/api/__tests__/: System.test.ts  alarm.test.ts  user.test.ts  userManagement.test.ts
src/assets/: main.css
src/components/: UpdateChecker.vue
src/composables/: useResponsive.ts  useTableData.ts  useUpdater.ts  useWebSocket.ts
src/layout/: Header.vue  MainLayout.vue  Sidebar.vue  TitleBar.vue
src/plugins/: elMessage.ts
src/router/: dynamic-routes.ts  guard.ts  index.ts  injector.ts  static-routes.ts
src/stores/: global.ts  ruleChain.ts  user.ts
src/types/: alarm.ts  assets.d.ts  channelConfiguration.ts  controlManagement.ts  deviceConfiguration.ts  deviceMonitoring.ts  home.ts  index.ts  menu.ts  rule.ts  ruleManagement.ts  statistics.ts  user.ts  userManagement.ts  websocket.ts
src/utils/: directives.ts  external.ts  key.ts  notify.ts  request.ts  responsive.ts  secureStore.ts  useDnd.ts  useLayout.ts  websocket.ts
~/.tauri/: tauri.key  tauri.key.pub
(+79 files in other folders)
